--- a/src/app/pages/apps/generateotp/generateotp.component.html
+++ b/src/app/pages/apps/generateotp/generateotp.component.html
@@ -7,10 +7,20 @@
 
       <div class="row m-t-20">
         <div class="col-lg-6">
-          <div style="display: flex;">
+          <!-- <div style="display: flex;">
 
             <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block m-t-12">User Name</mat-label> <span class="hintText"
-              style="font-size: 0.7rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* Allow Only
+              style="font-size: 0.8rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* Allow Only
+              Letters (Uppercase And Lowercase) And Numbers</span>
+          </div> -->
+
+          <div style="display: flex;margin-bottom: 0.3rem;">
+
+            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16" style="margin-bottom: 0 !important;
+            display: flex !important;
+            align-items: center !important;">User Name
+            </mat-label>
+            <span class="hintText" style="font-size: 0.8rem; margin-left: 10px; color: gray;">* Allow Only
               Letters (Uppercase And Lowercase) And Numbers</span>
           </div>
     
@@ -30,11 +40,20 @@
         </div>
         <div class="col-lg-6">
 
-          <div style="display: flex;">
+          <!-- <div style="display: flex;">
 
             <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block m-t-12">Contact Number</mat-label> <span class="hintText"
-              style="font-size: 0.7rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* Must Contain 10
+              style="font-size: 0.8rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* Must Contain 10
               Digit</span>
+          </div> -->
+
+          <div style="display: flex;margin-bottom: 0.3rem;">
+
+            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16" style="margin-bottom: 0 !important;
+            display: flex !important;
+            align-items: center !important;">Contact Number
+            </mat-label>
+            <span class="hintText" style="font-size: 0.8rem; margin-left: 10px; color: gray;">* Must Contain 10 Digit</span>
           </div>
     
           <mat-form-field appearance="outline" class="w-100" color="primary">
@@ -57,11 +76,20 @@
 
       <div class="row m-t-20">
         <div class="col-lg-6">
-          <div style="display: flex;">
+          <!-- <div style="display: flex;">
 
             <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block m-t-12">Description</mat-label>
              <span class="hintText"
-              style="font-size: 0.7rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* Maximum 200 Characters</span>
+              style="font-size: 0.8rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* Maximum 200 Characters</span>
+          </div> -->
+
+          <div style="display: flex;margin-bottom: 0.3rem;">
+
+            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16" style="margin-bottom: 0 !important;
+            display: flex !important;
+            align-items: center !important;">Description
+            </mat-label>
+            <span class="hintText" style="font-size: 0.8rem; margin-left: 10px; color: gray;">* Maximum 200 Characters</span>
           </div>
     
           <mat-form-field appearance="outline" class="w-100" color="primary">
@@ -81,11 +109,20 @@
           </mat-form-field>
         </div>
         <div class="col-lg-6">
-          <div style="display: flex;">
+          <!-- <div style="display: flex;">
 
             <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block m-t-12">Remarks</mat-label> 
             <span class="hintText"
-              style="font-size: 0.7rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* Maximum 200 Characters</span>
+              style="font-size: 0.8rem; margin-left: 10px; color: gray; align-items: end; display: flex;">* Maximum 200 Characters</span>
+          </div> -->
+
+          <div style="display: flex;margin-bottom: 0.3rem;">
+
+            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16" style="margin-bottom: 0 !important;
+            display: flex !important;
+            align-items: center !important;">Remarks
+            </mat-label>
+            <span class="hintText" style="font-size: 0.8rem; margin-left: 10px; color: gray;">* Maximum 200 Characters</span>
           </div>
     
           <mat-form-field appearance="outline" class="w-100" color="primary">
