--- a/src/app/pages/dashboards/dashboard1/dashboard-charts/dashboard-charts.component.scss
+++ b/src/app/pages/dashboards/dashboard1/dashboard-charts/dashboard-charts.component.scss
@@ -22,6 +22,18 @@
 //     background-color: white !important;
 // }
 
+// .apexcharts-legend-text{
+//     font-size: 18px !important;
+// }
+
+.mat-mdc-form-field-subscript-wrapper{
+    // display: none !important;
+}
+
+.hideToolTip .apexcharts-tooltip {
+    display: none !important;
+}
+
 .apexcharts-legend-text{
-    font-size: 18px !important;
+    font-size:14px !important;
 }
