--- a/src/app/pages/dashboards/dashboard1/dashboard1.component.html
+++ b/src/app/pages/dashboards/dashboard1/dashboard1.component.html
@@ -1,5 +1,371 @@
 
-<div class="row" style="justify-content: center;margin: 0;">
+<!-- <div class="row">
+  <div class="col-lg-2 col-sm-2">
+    <mat-card class="cardWithShadow text-center">
+      <mat-card-content class="p-24">
+        <div class="d-flex align-items-center">
+          <span
+            class="icon-56 bg-primary text-white rounded-circle d-flex align-items-center justify-content-center"
+          >
+            <mat-icon class="f-s-24">star</mat-icon>
+          </span>
+          <div class="m-l-12 text-left">
+            <mat-card-title class="f-s-20 f-w-500">
+             title
+            </mat-card-title>
+            <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-8">
+              sub
+            </mat-card-subtitle>
+          </div>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div> -->
+
+
+
+<div class="row" style="display: none">
+  <div class="col-lg-2">
+    <mat-card class="cardWithShadow bg-primary" (click)="regClientCard()">
+      <mat-card-content class="p-24">
+        <div class="d-flex align-items-center">
+          <span
+          class="icon-56 bg-primary text-white rounded-circle d-flex align-items-center justify-content-center" style="padding:4px"
+        >
+          <mat-icon class="" style="font-size: 45px !important;height: 45px;width: 45px;" >supervised_user_circle</mat-icon>
+        </span>
+          <div class="m-l-16">
+            <mat-card-title class="text-white m-0" style="text-align: center;"
+              >{{reg_count}} </mat-card-title
+            >
+            <span class="text-white f-w-400 m-t-13" style="font-size: 12px;">Registered Clients</span>
+          </div>
+        </div>
+      </mat-card-content>
+     
+    </mat-card>
+
+  </div>
+
+  <div class="col-lg-2">
+    <mat-card class="cardWithShadow" style="background-color: #EC8F5E;" (click)="patchCard()">
+      <mat-card-content class="p-24">
+        <div class="d-flex align-items-center">
+          <span
+            class="icon-56 text-white rounded-circle d-flex align-items-center justify-content-center" style="padding:2px; background-color: #EC8F5E;"
+          >
+            <mat-icon style="font-size: 45px !important;height: 45px;width: 45px;">settings</mat-icon>
+          </span>
+          <div class="m-l-16">
+            <mat-card-title class="text-white m-0" style="text-align: center;"
+              > {{patch_ver}} </mat-card-title
+            >
+            <span class="text-white f-w-400 m-t-10" style="font-size: 12px;">Patch Latest</span>
+          </div>
+        </div>
+      </mat-card-content>
+     
+    </mat-card>
+
+  </div>
+
+  <div class="col-lg-2">
+    <mat-card class="cardWithShadow" style="background-color: #3F979B;" (click)="policyCard()">
+      <mat-card-content class="p-24">
+        <div class="d-flex align-items-center">
+          <span
+            class="icon-56  text-white rounded-circle d-flex align-items-center justify-content-center" style="padding:3px; background-color: #3F979B !important;"
+          >
+            <mat-icon style="font-size: 45px !important;height: 45px;width: 45px;">assignment_turned_in</mat-icon>
+          </span>
+          <div class="m-l-1">
+            <mat-card-title class="text-white m-0" style="text-align: center;"
+              > {{policy_ver}} </mat-card-title
+            >
+            <span class="text-white f-w-400 m-t-10" style="font-size: 12px;"> Policy Latest </span>
+          </div>
+        </div>
+      </mat-card-content>
+     
+    </mat-card>
+
+  </div>
+
+
+  <div class="col-lg-2">
+    <mat-card class="cardWithShadow" style="background-color: #5CD2E6;" (click)="clamAvCard()">
+      <mat-card-content class="p-24">
+        <div class="d-flex align-items-center">
+          <span
+          class="icon-56 text-white rounded-circle d-flex align-items-center justify-content-center"  style="padding:5px; background-color: #5CD2E6;"
+        >
+          <mat-icon style="font-size: 45px !important;height: 45px;width: 45px;">assignment_returned</mat-icon>
+        </span>
+          <div class="m-l-1">
+            <mat-card-title class="text-white m-0" style="text-align: center;"
+              > {{clamAvData?.clam_updated_count}}/{{clamAvData?.total_reg}} </mat-card-title
+            >
+            <span class="text-white f-w-400 m-t-10" style="font-size: 12px;">ClamAv</span>
+          </div>
+        </div>
+      </mat-card-content>
+     
+    </mat-card>
+
+  </div>
+
+
+  <div class="col-lg-2">
+    <mat-card class="cardWithShadow" style="background-color: #A6CF98;" (click)="logCard()">
+      <mat-card-content class="p-24">
+        <div class="d-flex align-items-center">
+          <span
+          class="icon-56 text-white rounded-circle d-flex align-items-center justify-content-center" style="padding:3px;background-color: #A6CF98;"
+        >
+          <mat-icon style="font-size: 45px !important;height: 45px;width: 45px;">autorenew</mat-icon>
+        </span>          
+          <div class="m-l-1">
+            <mat-card-title class="text-white m-0" style="text-align: center;"
+              > {{logRecievedData?.log_received_count}}/{{logRecievedData?.total_reg}} </mat-card-title
+            >
+            <span class="text-white f-w-400 m-t-10" style="font-size: 12px;">Log </span>
+          </div>
+        </div>
+      </mat-card-content>
+     
+    </mat-card>
+
+  </div>
+
+  <div class="col-lg-2">
+    <mat-card class="cardWithShadow"  style="background-color: #FF6969; cursor: pointer;" (click)="alertCard()">
+      <mat-card-content class="p-24">
+        <div class="d-flex align-items-center">
+          <span
+          class="icon-56 text-white rounded-circle d-flex align-items-center justify-content-center" style="padding:3px;background-color: #FF6969;"
+        >
+          <mat-icon style="font-size: 45px !important;height: 45px;width: 45px;">announcement</mat-icon>
+        </span>
+          <div class="m-l-1">
+            <mat-card-title class="text-white m-0" style="text-align: center;"
+              >{{alert_count}}</mat-card-title
+            >
+            <span class="text-white f-w-400 m-t-10" style="font-size: 12px;"> Alerts  </span>
+          </div>
+        </div>
+      </mat-card-content>
+     
+      <!-- <app-spinner [showSpinner]="isSpinnerVisible['card1']">
+      </app-spinner> -->
+    </mat-card>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-lg-3  col-sm-6">
+    <mat-card class="cardWithShadow text-center " (click)="regClientCard()" style="cursor: pointer;">
+      <mat-card-content class="p-24">
+        <div class="d-flex align-items-center">
+          <span
+            class="icon-56 bg-primary text-white rounded-circle d-flex align-items-center justify-content-center"
+          >
+            <mat-icon class="f-s-24">supervised_user_circle</mat-icon>
+          </span>
+          <div class="m-l-12 text-left">
+            <mat-card-title class="f-s-20 f-w-500">
+              {{reg_count}} 
+            </mat-card-title>
+            <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-8">
+              Registered Clients
+            </mat-card-subtitle>
+          </div>
+        </div>
+      </mat-card-content>
+
+      <app-spinner [showSpinner]="isSpinnerVisible['Registrationcard']">
+      </app-spinner>
+
+    </mat-card>
+  </div>
+
+  <div class="col-lg-3 col-sm-6">
+    <mat-card class="cardWithShadow text-center" (click)="deleteClientCard()" style="cursor: pointer;">
+      <mat-card-content class="p-24">
+        <div class="d-flex align-items-center">
+          <span
+            class="icon-56 bg-warning text-white rounded-circle d-flex align-items-center justify-content-center"
+          >
+            <mat-icon class="f-s-24">delete</mat-icon>
+          </span>
+          <div class="m-l-12 text-left">
+            <mat-card-title class="f-s-20 f-w-500">
+              {{deletedClientCount}}
+            </mat-card-title>
+            <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-8">
+              Deleted Clients
+            </mat-card-subtitle>
+          </div>
+        </div>
+      </mat-card-content>
+      <app-spinner [showSpinner]="isSpinnerVisible['dashDeleteClientCard']">
+      </app-spinner>
+    </mat-card>
+  </div>
+
+  <div class="col-lg-3  col-sm-6">
+    <mat-card class="cardWithShadow text-center" (click)="bolckClientCard()" style="cursor: pointer;">
+      <mat-card-content class="p-24">
+        <div class="d-flex align-items-center">
+          <span
+            class="icon-56 bg-accent text-white rounded-circle d-flex align-items-center justify-content-center"
+          >
+            <mat-icon class="f-s-24">not_interested</mat-icon>
+          </span>
+          <div class="m-l-12 text-left">
+            <mat-card-title class="f-s-20 f-w-500">
+              {{blockedClientdCount}}
+            </mat-card-title>
+            <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-8">
+              Blocked Clients
+            </mat-card-subtitle>
+          </div>
+        </div>
+      </mat-card-content>
+      <app-spinner [showSpinner]="isSpinnerVisible['dashBlockClientCard']">
+      </app-spinner>
+    </mat-card>
+  </div>
+
+ 
+
+  <div class="col-lg-3  col-sm-6" style="padding-right: 0 !important;">
+    <mat-card class="cardWithShadow text-center" (click)="alertCard()" style="cursor: pointer;">
+      <mat-card-content class="p-24">
+        <div class="d-flex align-items-center">
+          <span
+            class="icon-56 bg-error text-white rounded-circle d-flex align-items-center justify-content-center"
+          >
+            <mat-icon class="f-s-24">announcement</mat-icon>
+          </span>
+          <div class="m-l-12 text-left">
+            <mat-card-title class="f-s-20 f-w-500">
+              {{alert_count}}
+            </mat-card-title>
+            <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-8">
+              Alerts
+            </mat-card-subtitle>
+          </div>
+        </div>
+      </mat-card-content>
+      <app-spinner [showSpinner]="isSpinnerVisible['dashAlertCard']">
+      </app-spinner>
+    </mat-card>
+  </div>
+
+
+</div>
+
+<!-- <div class="row">
+
+
+  <div class="col-lg-3 col-sm-6">
+    <mat-card class="cardWithShadow text-center" (click)="patchCard()" style="cursor: pointer;">
+      <mat-card-content class="p-24">
+        <div class="d-flex align-items-center">
+          <span
+            class="icon-56 bg-primary text-white rounded-circle d-flex align-items-center justify-content-center"
+          >
+            <mat-icon class="f-s-24">settings</mat-icon>
+          </span>
+          <div class="m-l-12 text-left">
+            <mat-card-title class="f-s-20 f-w-500">
+              {{pat_upd_cli}}/{{pat_tol_cli}}
+            </mat-card-title>
+            <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-8">
+              Patch: {{patch_ver}} Version
+            </mat-card-subtitle>
+          </div>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+  <div class="col-lg-3 col-sm-6">
+    <mat-card class="cardWithShadow text-center"  (click)="policyCard()" style="cursor: pointer;">
+      <mat-card-content class="p-24">
+        <div class="d-flex align-items-center">
+          <span
+            class="icon-56  bg-warning  text-white rounded-circle d-flex align-items-center justify-content-center" 
+          >
+            <mat-icon class="f-s-24">assignment_turned_in</mat-icon>
+          </span>
+          <div class="m-l-12 text-left">
+            <mat-card-title class="f-s-20 f-w-500">
+              {{pol_upd_cli}}/{{pol_tot_cli}} 
+            </mat-card-title>
+            <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-8">
+               Policy: {{policy_ver}} Version
+            </mat-card-subtitle>
+          </div>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+  <div class="col-lg-3  col-sm-6">
+    <mat-card class="cardWithShadow text-center" (click)="clamAvCard()" style="cursor: pointer;">
+      <mat-card-content class="p-24">
+        <div class="d-flex align-items-center">
+          <span
+            class="icon-56 bg-accent text-white rounded-circle d-flex align-items-center justify-content-center"
+          >
+            <mat-icon class="f-s-24">assignment_returned</mat-icon>
+          </span>
+          <div class="m-l-12 text-left">
+            <mat-card-title class="f-s-20 f-w-500">
+              {{clamAvData?.clam_updated_count}}/{{clamAvData?.total_reg}}
+            </mat-card-title>
+            <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-8">
+              ClamAV
+            </mat-card-subtitle>
+          </div>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+
+  <div class="col-lg-3 col-md-3 col-sm-4">
+    <mat-card class="cardWithShadow text-center" (click)="logCard()" style="cursor: pointer;">
+      <mat-card-content class="p-24">
+        <div class="d-flex align-items-center">
+          <span
+            class="icon-56 text-white  bg-error rounded-circle d-flex align-items-center justify-content-center" 
+          >
+            <mat-icon class="f-s-24">autorenew</mat-icon>
+          </span>
+          <div class="m-l-12 text-left">
+            <mat-card-title class="f-s-20 f-w-500">
+              {{logRecievedData?.log_received_count}}/{{logRecievedData?.total_reg}}
+            </mat-card-title>
+            <mat-card-subtitle class="m-t-4 f-s-14 f-w-400 m-t-8">
+              Logs Received
+            </mat-card-subtitle>
+          </div>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+ 
+
+</div> -->
+
+
+
+
+<div class="row" style="justify-content: center;margin: 0; display: none;">
     <mat-card class="cardWithShadow text-center flex-fill" style="min-width: 210px; max-width: 230px; cursor: pointer;" (click)="regClientCard()">
       <mat-card-content class="p-16" style="">
         <div class="d-flex align-items-center">
@@ -22,6 +388,7 @@
        
       </mat-card-content>
     </mat-card>
+    
 
 
     <!-- <mat-card class="cardWithShadow text-center flex-fill" style="min-width:220px">
@@ -221,9 +588,26 @@
           color: white; background-color: #fc4b6c"><span style="font-size: 14px;font-weight:bold">{{logRecievedData?.log_received_percent | number:'1.0-0'}}%</span> </div>
         </div> -->
       </mat-card-content>
+      <!-- <app-spinner [showSpinner]="isSpinnerVisible['card1']">
+      </app-spinner> -->
     </mat-card>
 
   </div>
 
+  <app-dashboard-charts2></app-dashboard-charts2>
 
   <app-dashboard-charts></app-dashboard-charts>
+
+  
+  
+
+  <!-- <app-spinner></app-spinner> -->
+
+  <!-- <div style="width: 500px; height: 500px; border: 2px solid black; margin-right: 30px; position: relative; background-color: bisque;">
+    3 my content 1s \<br> fdsfdsds \<br> fdsfdsds\<br> fdsfdsds\<br> fdsfdsds\<br> fdsfdsds\<br> fdsfdsds\<br> fdsfdsds\<br> fdsfdsds\<br> fdsfdsds\<br> fdsfdsd
+    <app-spinner [showSpinner]="isSpinnerVisible['card1']">
+    </app-spinner>
+</div>
+
+  <button (click)="sampleShow()">show button for first spinner</button>
+<button (click)="sampleHide()">hide button for first spinner</button> -->
