--- a/src/app/pages/dashboards/dashboard1/dashboard1.component.scss
+++ b/src/app/pages/dashboards/dashboard1/dashboard1.component.scss
@@ -1,7 +1,7 @@
 .mat-mdc-card{
 
-    max-width: 290px;
-    margin-right: 14px;
+    // max-width: 290px;
+    // margin-right: 14px;
 }
 
 .progress-bar {
@@ -15,5 +15,13 @@
     height: 100%;
     // background-color: #ffb22b; /* Change this to your desired color */
   }
+
+//   .col-sm-2{
+// padding: 0 !important;
+//   }
+
+//   .col-lg-2{
+//     padding: 0 !important;
+//       }
 
   
