--- a/src/app/pages/apps/client-administraion/client-administraion.component.html
+++ b/src/app/pages/apps/client-administraion/client-administraion.component.html
@@ -3,42 +3,39 @@
 
 
 <div class="row justify-content-center " >
-  <div class="col-sm-6 col-lg-4">
+  <div class="col-sm-4 col-lg-4">
     <mat-card id="myDiv" #registeredClientsBtn class="cardWithShadow card2 position-relative card-hover" style="min-height:30vh; cursor: pointer;" (click)="clientStatus(1)">
       <mat-card-content style="margin: auto;">
         <div style="display:flex; justify-content: center;">
           <span class=" bg-accent rounded-circle" style="padding:10px">
-
-            <mat-icon  style="font-size:80px !important; height:80px; width:80px; color:white;display: flex; ">list_alt</mat-icon>
+            <i-tabler name="checkup-list" class=" d-flex" style="color: white;
+            font-size: 80px;
+            height: 80px;
+            width: 80px;"></i-tabler>
           </span>
         </div>
-        <mat-card-title style="display: flex; justify-content: center; margin-top:10px">List Of Registered Clients</mat-card-title>
+        <mat-card-title style="display: flex; justify-content: center; margin-top:10px">Registered Clients</mat-card-title>
       </mat-card-content>
     </mat-card>
   </div>
 
-  <div class="col-sm-6 col-lg-4">
+  <div class="col-sm-4 col-lg-4">
     <mat-card class="cardWithShadow card2 position-relative card-hover" style="min-height:30vh; cursor:pointer" (click)="clientStatus(2)">
       <mat-card-content style="margin: auto;">
         <div style="display:flex; justify-content: center;">
           <span class=" bg-accent rounded-circle" style="padding:10px">
-
-            <mat-icon  style="font-size:80px !important; height:80px; width:80px; color:white; display: flex;">insert_chart</mat-icon>
+            <i-tabler name="users-group" class=" d-flex" style="color: white;
+            font-size: 80px;
+            height: 80px;
+            width: 80px;"></i-tabler>
           </span>
         </div>
-        <mat-card-title style="display: flex; justify-content: center; margin-top:10px">Registered Client's Status</mat-card-title>
+        <mat-card-title style="display: flex; justify-content: center; margin-top:10px">Clients Status</mat-card-title>
       </mat-card-content>
     </mat-card>
   </div>
 
-
-
-</div>
-
-<div class="row justify-content-center " >
-
-
-  <div class="col-sm-6 col-lg-4">
+  <div class="col-sm-4 col-lg-4">
     <mat-card class="cardWithShadow card2 position-relative card-hover" style="min-height:30vh; cursor:pointer" (click)="clientStatus(3)">
       <mat-card-content style="margin: auto;">
         <div style="display:flex; justify-content: center;">
@@ -54,23 +51,66 @@
     </mat-card>
   </div>
 
-  <div class="col-sm-6 col-lg-4">
+  <div class="col-sm-4 col-lg-4">
     <mat-card class="cardWithShadow card2 position-relative card-hover" style="min-height:30vh; cursor:pointer" (click)="clientStatus(4)">
       <mat-card-content style="margin: auto;">
         <div style="display:flex; justify-content: center;">
           <span class=" bg-accent rounded-circle" style="padding:10px">
 
-            <i-tabler name="list" class="d-flex" style="color: white;
+            <i-tabler name="file-description" class="d-flex" style="color: white;
             font-size: 80px;
             height: 80px;
             width: 80px;"></i-tabler>
 
           </span>
         </div>
-        <mat-card-title style="display: flex; justify-content: center; margin-top:10px">List Of Deleted Clients</mat-card-title>
+        <mat-card-title style="display: flex; justify-content: center; margin-top:10px">Deleted Clients List</mat-card-title>
       </mat-card-content>
     </mat-card>
   </div>
+
+  <div class="col-sm-4 col-lg-4">
+    <mat-card class="cardWithShadow card2 position-relative card-hover" style="min-height:30vh; cursor:pointer" (click)="clientStatus(5)">
+      <mat-card-content style="margin: auto;">
+        <div style="display:flex; justify-content: center;">
+          <span class=" bg-accent rounded-circle" style="padding:10px">
+
+            <i-tabler name="user-cancel" class="d-flex" style="color: white;
+            font-size: 80px;
+            height: 80px;
+            width: 80px;"></i-tabler>
+
+          </span>
+        </div>
+        <mat-card-title style="display: flex; justify-content: center; margin-top:10px">Block Clients</mat-card-title>
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+  <div class="col-sm-4 col-lg-4">
+    <mat-card class="cardWithShadow card2 position-relative card-hover" style="min-height:30vh; cursor:pointer" (click)="clientStatus(6)">
+      <mat-card-content style="margin: auto;">
+        <div style="display:flex; justify-content: center;">
+          <span class=" bg-accent rounded-circle" style="padding:10px">
+
+            <i-tabler name="license-off" class="d-flex" style="color: white;
+            font-size: 80px;
+            height: 80px;
+            width: 80px;"></i-tabler>
+
+          </span>
+        </div>
+        <mat-card-title style="display: flex; justify-content: center; margin-top:10px">Blocked Clients List</mat-card-title>
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+</div>
+
+<div class="row justify-content-center " >
+
+
+ 
 
 </div>
 
@@ -80,28 +120,31 @@
 
   <mat-card class="cardWithShadow " >
     <mat-nav-list class="p-x-16">
-      <button  mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 10px;"
+      <div style="display: flex; ">
+
+     
+      <button  mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 5px !important;"
         [class.border-red]="formNo === 1" (click)="clientStatus(1)">
         <span class="text-primary" style="display: flex;">
           <i-tabler name="checkup-list" class="icon-20 d-flex" style="margin-right: 0.2rem; margin-top: auto; margin-bottom: auto"></i-tabler>
           <span>
-            List Of Registered Clients
+            Registered Clients List
           </span>
         </span>
       </button>
   
-      <button mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 10px;"
+      <button mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 5px !important;"
         [class.border-red]="formNo === 2" (click)="clientStatus(2)"> 
         <span class="text-primary" style="display: flex;">
           <!-- <i-tabler name="report-analytics" class="icon-20 d-flex" style="margin-right: 0.2rem"></i-tabler> -->
-          <mat-icon style="margin-right: 0.2rem;margin-top: auto; margin-bottom: auto">insert_chart</mat-icon>
+          <i-tabler name="users-group" class="icon-20 d-flex" style="margin-right: 0.2rem; margin-top: auto; margin-bottom: auto"></i-tabler>
           <span>
-            Registered Client's Status
+            Clients Status
           </span>
         </span>
       </button>
 
-      <button  mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 10px;"
+      <button  mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 5px !important;"
       [class.border-red]="formNo === 3" (click)="clientStatus(3)">
       <span class="text-primary" style="display: flex;">
         <i-tabler name="user-x" class="icon-20 d-flex" style="margin-right: 0.2rem; margin-top: auto; margin-bottom: auto"></i-tabler>
@@ -111,17 +154,100 @@
       </span>
     </button>
 
-    <button  mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 10px;"
+    <!-- <button  mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 10px;"
     [class.border-red]="formNo === 4" (click)="clientStatus(4)">
     <span class="text-primary" style="display: flex;">
-      <i-tabler name="list" class="icon-20 d-flex" style="margin-right: 0.2rem; margin-top: auto; margin-bottom: auto"></i-tabler>
+      <i-tabler name="file-description" class="icon-20 d-flex" style="margin-right: 0.2rem; margin-top: auto; margin-bottom: auto"></i-tabler>
       <span>
         List Of Deleted Clients
       </span>
     </span>
-  </button>
+  </button> -->
 
+  <!-- <button  mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 10px;"
+  [class.border-red]="formNo === 5" (click)="clientStatus(5)">
+  <span class="text-primary" style="display: flex;">
+    <i-tabler name="user-cancel" class="icon-20 d-flex" style="margin-right: 0.2rem; margin-top: auto; margin-bottom: auto"></i-tabler>
+    <span>
+      Block Client
+    </span>
+  </span>
+</button>
+
+<button  mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 10px;"
+[class.border-red]="formNo === 6" (click)="clientStatus(6)">
+<span class="text-primary" style="display: flex;">
+  <i-tabler name="license-off" class="icon-20 d-flex" style="margin-right: 0.2rem; margin-top: auto; margin-bottom: auto"></i-tabler>
+  <span>
+    Block Client List
+  </span>
+</span>
+</button> -->
+
+
+<button  mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 5px !important;"
+[class.border-red]="formNo === 4" (click)="clientStatus(4)">
+<span class="text-primary" style="display: flex;">
+  <i-tabler name="file-description" class="icon-20 d-flex" style="margin-right: 0.2rem; margin-top: auto; margin-bottom: auto"></i-tabler>
+  <span>
+    Deleted Clients List
+  </span>
+</span>
+</button>
+
+<button  mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 5px !important;"
+[class.border-red]="formNo === 5" (click)="clientStatus(5)">
+<span class="text-primary" style="display: flex;">
+  <i-tabler name="user-cancel" class="icon-20 d-flex" style="margin-right: 0.2rem; margin-top: auto; margin-bottom: auto"></i-tabler>
+  <span>
+    Block Client
+  </span>
+</span>
+</button>
+
+<button  mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 5px !important ;"
+[class.border-red]="formNo === 6" (click)="clientStatus(6)">
+<span class="text-primary" style="display: flex;">
+<i-tabler name="license-off" class="icon-20 d-flex" style="margin-right: 0.2rem; margin-top: auto; margin-bottom: auto"></i-tabler>
+<span>
+  Blocked Clients List
+</span>
+</span>
+</button>
+</div>
     </mat-nav-list>
+    <!-- <div style="display: flex;justify-content: center;">
+
+      <button  mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 10px;"
+      [class.border-red]="formNo === 4" (click)="clientStatus(4)">
+      <span class="text-primary" style="display: flex;">
+        <i-tabler name="file-description" class="icon-20 d-flex" style="margin-right: 0.2rem; margin-top: auto; margin-bottom: auto"></i-tabler>
+        <span>
+          List Of Deleted Clients
+        </span>
+      </span>
+    </button>
+
+      <button  mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 10px;"
+      [class.border-red]="formNo === 5" (click)="clientStatus(5)">
+      <span class="text-primary" style="display: flex;">
+        <i-tabler name="user-cancel" class="icon-20 d-flex" style="margin-right: 0.2rem; margin-top: auto; margin-bottom: auto"></i-tabler>
+        <span>
+          Block Client
+        </span>
+      </span>
+    </button>
+    
+    <button  mat-flat-button class="rounded m-b-8 bg-light-primary" style="padding: 1.3rem 1rem; margin: 0 10px;"
+    [class.border-red]="formNo === 6" (click)="clientStatus(6)">
+    <span class="text-primary" style="display: flex;">
+      <i-tabler name="license-off" class="icon-20 d-flex" style="margin-right: 0.2rem; margin-top: auto; margin-bottom: auto"></i-tabler>
+      <span>
+        List Of Blocked Clients
+      </span>
+    </span>
+    </button>
+    </div> -->
   </mat-card>
   
   <!-- <mat-card  class="  cardWithShadow">
@@ -138,11 +264,35 @@
 
             <div *ngIf="formNo ==3">
              
-              <div *ngIf="userType == 'admin_user' || userType == 'superadmin_user' ; else elseBlock">
+              <div *ngIf="userType == 'admin_user' || userType == 'superadmin_user' ; else elseDeleteClient">
                 <app-deleted-client></app-deleted-client>
               </div>
               
-              <ng-template #elseBlock>
+              <ng-template #elseDeleteClient>
+                <mat-card class="cardWithShadow text-center">
+                  <mat-card-content class="p-24">
+                    <h1>You Are Not An Authorized User. Contact The ISOC Admin.</h1>
+                  </mat-card-content>
+                </mat-card>
+              </ng-template>
+              
+             
+            </div>
+
+            <div *ngIf="formNo ==4">
+          
+              <app-deleted-client-list></app-deleted-client-list>
+          
+
+            </div>
+
+            <div *ngIf="formNo ==5">
+              
+              <div *ngIf="userType == 'admin_user' || userType == 'superadmin_user' ; else elseDeleteClientClient">
+                <app-block-client></app-block-client>
+              </div>
+              
+              <ng-template #elseDeleteClientClient>
                 <mat-card class="cardWithShadow text-center">
                   <mat-card-content class="p-24">
                     <h1>You Are Not An Authorized User. Contact The ISOC Admin.</h1>
@@ -150,13 +300,15 @@
                 </mat-card>
 
               </ng-template>
-              
-             
             </div>
 
-            <div *ngIf="formNo ==4">
+            <div *ngIf="formNo ==6">
               
-              <app-deleted-client-list></app-deleted-client-list>
+              
+              <app-block-client-list></app-block-client-list>
+              
+             
+
             </div>
   
     <!-- </mat-card-content>
