--- a/src/app/pages/apps/hierarchy-chart/hierarchy-chart.component.html
+++ b/src/app/pages/apps/hierarchy-chart/hierarchy-chart.component.html
@@ -1,39 +1,47 @@
-<!-- <div class="zoom-controls">
-    <button (click)="zoomIn()">+</button>
-    <button (click)="zoomOut()">-</button>
+<!-- <div id="tree-container"> -->
+  <!-- *ngIf="(userDetails.usertype === 'superadmin_user' || userDetails.usertype === 'department') && userDetails.usertype !== 'teacher' &&  blocklist.length > 0" -->
+
+  <!-- <div *ngIf="userType == 'admin_user' || userType == 'superadmin_user'"> -->
+
+    <!-- <div></div>
+  <div id="tree"></div>
+  <div class="zoom-buttons">
+    
+    <button (click)="zoomIn()">Zoom In</button>
+    <button (click)="zoomOut()">Zoom Out</button>
   </div>
+</div> -->
+<!-- <div *ngIf="(this.user === 'sadmin' || this.user === 'test')"> -->
+ 
+ 
+  <div id="tree-container" style="height: 80vh;  overflow-y: auto;       "> 
+    <!-- <div id="tree-container" style="height: 80vh;  overflow-y: auto; overflow-x: auto;width: 160vh; ">  -->
+
+    <button id="max"  (click)="zoomIn()">+</button>
+    <button id="min" (click)="zoomOut()">-</button>
   
-  <div class="org-chart-container"  >
-   <div   [style.transform]="'scale(' + zoomLevel + ')'">
+    
+  <div id="tree"></div>
+  
+  <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="ball-clip-rotate" [fullScreen]="true">
+    <p class="text-white"> {{ loaderStatus }} </p>
+  </ngx-spinner>
+</div>
 
   
-    <p-organizationChart [value]="organizationData" #orgChart selectionMode="single">
-
-    <ng-template let-node pTemplate="person">
-      
-      <div class="node-style text-center card" [class]="node.styleClass"
-           [class.node-highlight]="node.highlighted"
-           (click)="highlightNode(node)"
-           
-           (mouseover)="highlightOnMouseOver(node)"  
-           (mouseout)="removeHighlightOnMouseOut(node)">
-        <div class="card">
-          <div class="headerone text-white">
-            <div></div>
-            {{ node.data.name }}
-
-          </div>
-          <div class="headertwo">
-            <div style="color: Blue; font-weight: bold;">Total clients</div>
-            <div style="color:  Blue; font-weight: bold;">Sub clients</div>
-            <div style="color:  Blue; font-weight: bold;">Blocked Clients</div>
-            
-            <div style="color:#7a0220;font-weight: bold; ">Policy</div>
-            <div style="color: #7a0220;font-weight: bold; ">Patch</div>
-            <div style="color: #7a0220;font-weight: bold; ">Clam</div>
-          </div>
-          
-        </div>
-      </div>
-    </ng-template>
-  </p-organizationChart></div></div> -->
+  <!-- <div id="tree-container"> -->
+   
+    <!-- <div class="zoom-buttons">
+      <button (click)="zoomIn()">+</button>
+      <button (click)="zoomOut()">-</button>
+    </div> -->
+    <!-- <button id="max"  (click)="zoomIn()">+</button>
+    <button id="min" (click)="zoomOut()">-</button>
+  
+    
+  <div id="tree"></div>
+  </div> -->
+  <!-- </div> -->
+  <!-- <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="ball-clip-rotate" [fullScreen]="true">
+    <p class="text-white"> {{ loaderStatus }} </p>
+  </ngx-spinner> -->
