--- a/src/app/pages/apps/hierarchy-chart/hierarchy-chart.component.scss
+++ b/src/app/pages/apps/hierarchy-chart/hierarchy-chart.component.scss
@@ -1,113 +1,58 @@
-.node-style {
-  background-color: #ffffff;
-  border: 4px solid transparent;
-  border-radius:  5px; 
-  /* min-width: 250px; 
-  min-height: 280px; */
-}
 
-
-.zoom-controls button {
-  font-size: 1.5em; 
-  background-color: #3e473e; 
-  color: white;
-  border: none;
-  padding: 10px 20px; 
-  margin: 5px;
-  cursor: pointer;
-}
-
-.zoom-controls button:hover {
-  background-color: #45a049; 
-}
-
-
-// .org-chart-container {
-//   max-height: 1000px; 
+// .card{
+//   // width: 100%;
+//   // height: 100%; 
+//   // margin-left: 0;
+//   // top: -5px;
+//   // position: top;
 //   overflow-y: auto;
-//   transform-origin: top left;
-//   transition: transform 0.3s ease;
-//   justify-content: left;
-//   align-items: left;
-//     display: flex; /* Enable flexbox behavior */
-  
+//   overflow-x: auto;
 // }
-.org-chart-container {
-  max-height: 1000px;
-  overflow-y: auto;
-  transform-origin: top left; /* Adjust as needed */
-  transition: transform 0.3s ease;
-  justify-content: left;
-  align-items: left;
-  display: flex;
+
+
+#min, #max {
+  position: absolute;
+  top: 50px;
+  right: 107px;
+  z-index: 5000000;
+  width: 30px;
+  height: 30px; 
+}
+#max {
+  right: 140px; 
 }
 
 
-
-.node-highlight {
-  border-color: #3f0fee !important; 
-  box-shadow: 0 0 5px rgba(10, 79, 228, 0.5); 
-}
-
-  .headerone {
-    background-color: #091e97;
-    font-weight: bold;
-    padding: 10px;
-    margin: 0; 
-    width: 200px; 
-    text-align: center;
-   
-    display: block;
-  }
-  
-  .headertwo div {
-    margin-bottom: 10px; 
-  }
-  
-  .headertwo {
-    padding: 20px; 
-    font-weight: normal; 
-    color: rgb(19, 5, 5);
-    background-color: white;
-    width: 200px; 
-    
-  }
-  
-.level-0 {
-  background-color: #c8f5ee;
-padding: 1px;
-max-width: 214px;
-display: flex;
-justify-content: center;
-margin: auto;
-}
-
-.level-1 {
-  background-color: #c2f0c2; 
-  padding: 1px;
-  max-width: 214px;
-  display: flex;
-justify-content: center;
-margin: auto;
-}
-
-.level-2 {
-  background-color: #d9e1f2; 
-  padding: 1px;
-  max-width: 214px;
-  display: flex;
-justify-content: center;
-margin: auto;
-}
-
-.level-3 {
-    background-color: #d9e1f2; 
-    padding: 1px;
-    max-width: 214px;
-    display: flex;
-justify-content: center;
-margin: auto;
-  }
+// .label {
+//   margin-right: 8px; /* Adjust the value based on your preference */
+// }
 
 
+
+// .zoom-buttons button:hover {
+//   background-color: #45a049; 
+// }
+
+
+
+// #tree-container {
+  // max-height: 100%;
+  // max-width: 100%;
+// scroll-padding-left: 10px;// top: 0;
+
+// overflow-x: auto;
+// overflow-y: auto;
+// padding-top: 50px;
+// }
+// html, body {
+//   top: 0px;
+//     // padding: 0px;
+//     width: 50%;
+//     height: 10%;
+//     // font-family: Helvetica;
+//     // overflow: hidden;
+//   // height: 100%;
+//   // margin: 40px;
+//   // padding: 0;
+// }
 
