--- a/src/app/pages/apps/policy-summary/policy-summary.component.html
+++ b/src/app/pages/apps/policy-summary/policy-summary.component.html
@@ -29,14 +29,12 @@
                            
                               <tr *ngFor="let item of policySummary; ">
                                 <td>
-                                  
-                                  <span style="display: flex;">
-                                    <i-tabler name={{item.icon}} class="icon-20 d-flex" style="margin-right: 0.2rem; margin-top: auto;
-                                    margin-bottom: auto;"></i-tabler>
-                                    <span>
-                                      {{ item.policy_type }}
-                                    </span>
-                                </span>
+                                  <div style="display: flex; align-items: center;">
+                                    <i-tabler name={{item.icon}} class="icon-20 d-flex" style=""></i-tabler>
+                                    <div style="text-align: center;width: 100%">
+                                        <span>{{ item.policy_type }}</span>
+                                    </div>
+                                </div>
 
                                 </td>
                                 <td>{{ item.total }}</td>
