--- a/src/app/pages/apps/regstatusclient/regstatusclient.component.html
+++ b/src/app/pages/apps/regstatusclient/regstatusclient.component.html
@@ -25,7 +25,7 @@
             <tr *ngFor="let item of clientRegStatus; let i = index">
               <td>{{ i + 1 }}</td>
               <!-- <td>{{ item.client_id }}</td> -->
-              <td>{{ item.client_id }}-{{ item.client_name }}</td>
+              <td>{{ item.client_id }}</td>
               <td>{{ item.client_macid }}</td>
               <td>{{ item.client_name }}</td>
       
