--- a/src/app/pages/dashboards/dashboard1/patch-pop-up/patch-pop-up.component.html
+++ b/src/app/pages/dashboards/dashboard1/patch-pop-up/patch-pop-up.component.html
@@ -1,6 +1,6 @@
 <div style=" margin: 2rem;">
 
-    <h1 style="display: flex; justify-content: center;">Patch details</h1>
+    <h1 style="display: flex; justify-content: center;">Patch Details</h1>
 
     <!-- <div *ngIf="showTable"> -->
 
